--- a/tests/perun/micro_services/configurations/perun_config_test.yml
+++ b/tests/perun/micro_services/configurations/perun_config_test.yml
@@ -7,3 +7,5 @@ ldap.base: 'base'
 rpc.hostname: 'hostname'
 rpc.user: 'user'
 rpc.password: 'password'
+
+perun_attr_map_file: 'tests/perun/micro_services/configurations/perun_test_attributes_map.yaml'
