--- a/tests/perun/micro_services/configurations/perun_test_attributes_map.yaml
+++ b/tests/perun/micro_services/configurations/perun_test_attributes_map.yaml
@@ -1,19 +1,19 @@
 ---
 # USER ATTRIBUTES
-our_test_attribute_1:
-  rpc: urn:attr:1
+internal_test_attribute_1:
+  rpc: test:urn:attr:1
   ldap: attr1
   type: bool
-our_test_attribute_2:
-  rpc: urn:attr:2
+internal_test_attribute_2:
+  rpc: test:urn:attr:2
   ldap: attr2
   type: integer
-our_test_attribute_3:
-  rpc: urn:attr:3
+internal_test_attribute_3:
+  rpc: test:urn:attr:3
   ldap: attr3
   type: string
-our_test_attribute_4:
-  rpc: urn:attr:4
+internal_test_attribute_4:
+  rpc: test:urn:attr:4
   ldap: attr4
-  type: map
+  type: list
 
